--- a/SmartVault.DataGeneration/SmartVault.DataGeneration.csproj
+++ b/SmartVault.DataGeneration/SmartVault.DataGeneration.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SmartVault.CodeGeneration\SmartVault.CodeGeneration.csproj" />
+    <ProjectReference Include="..\SmartVault.Domain\SmartVault.Domain.csproj" />
   </ItemGroup>
 
 </Project>
