--- a/SmartVault.Program/SmartVault.Program.csproj
+++ b/SmartVault.Program/SmartVault.Program.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper.Extensions.SQLite" Version="4.2.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
